# tap-restaurant365

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_restaurant365/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
