[tool.poetry]
name = "tap-restaurant365"
version = "0.0.1"
description = "`tap-restaurant365` is a Singer tap for Restaurant365, built with the Hotglue Singer SDK."
readme = "README.md"
authors = ["Hotglue <hello@hotglue.xyz>"]
keywords = [
    "ELT",
    "Restaurant365",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
hotglue-singer-sdk = "^1.0.32"
requests = "~=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_restaurant365"]
target-version = "py310"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_restaurant365"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-restaurant365 = 'tap_restaurant365.tap:TapRestaurant365.cli'
